package app.domain.model;

public class TestParameter {

    //getParameter()
    //addResult(result, metric, refValue)

}
