package app.domain.model;

public class TestParameterResult {

    //TestParameterResult(value, metric, refValue)

}
